--- a/_posts/2020-05-28-AB_test.md
+++ b/_posts/2020-05-28-AB_test.md
@@ -4,11 +4,13 @@ title:  "bayesian A/B test"
 
 date: 2020-05-28 
 use_math: true
-categories: ['bayesian'] 
-
+categories: ['a/b test'] 
+permalink: /categories/
+layout : category
 tags: ['bayesian', 'e-commerce', 'pymc3'] 
 
 ---
+
 
 
 # A/B test with Bayesian
