--- a/_posts/2020-05-28-AB_test.md
+++ b/_posts/2020-05-28-AB_test.md
@@ -4,7 +4,7 @@ title:  "bayesian A/B test"
 
 date: 2020-05-28 
 use_math: true
-categories: ['a/b test'] 
+categories: ['ab test'] 
 permalink: /categories/
 layout : category
 tags: ['bayesian', 'e-commerce', 'pymc3'] 
@@ -12,8 +12,6 @@ tags: ['bayesian', 'e-commerce', 'pymc3']
 ---
 
 
-
-# A/B test with Bayesian
 
 새로운 디자인/상품/등 을 두가지 형태인 A/B 안으로 나누어 어느 것이 더 효과적인지 확인하려고 할때 사용되는 test의 한 방법이다. 일반적으로는 마케팅 영역에서 널리 사용되는데, 사용자들에게 무작위로 A안 또는 B안을 보여준 후 이에 반응하는 사용자들의 *전환율* 차이를 통해 더 나은 '안' 을 선택하는 방법이다.
 ![사진1](https://i1.wp.com/iolacademy.com/wp-content/uploads/2018/01/ab-test-1-1.png?w=1472&ssl=1)  
@@ -91,6 +89,7 @@ tags: ['bayesian', 'e-commerce', 'pymc3']
 | ![사진6](https://miro.medium.com/max/2001/1*_8Bb_AVFJuA_HEs7e0TQ6g.png) |
 |:--:|
 | *사전확률분포* |
+
 <br>
 
 사전확률분포를 정하고 난후 데이터 수집을 통해 사후 확률을 구한다. 각각의 대안 A/B에 대해서 사후 확률을 구함으로써 우리가 내리는 결론이 얼마나 불확실한지에 대한 정보를 알 수 있다. 이러한 정보는 의사결정시에 중요한 정보로 활용될 수 있다.
@@ -99,6 +98,7 @@ tags: ['bayesian', 'e-commerce', 'pymc3']
 | ![사진7](https://miro.medium.com/max/2001/1*Rpgbl9Ob1GhHBZr3AIhIkQ.png) |
 |:--:|
 | *사후확률분포* |
+
 <br>
 
 ## bayesian A/B test using PYMC3
@@ -167,7 +167,7 @@ pm.model_to_graphviz(ad_model)
 
 
 
-![svg](img/AB_01.svg)
+![svg](../assets/posts/ab_test/AB01_01.svg)
 
 
 
@@ -191,7 +191,7 @@ _ = az.plot_trace(trace)
 ```
 
 
-![png](img/AB_02.png)
+![png](../assets/posts/ab_test/AB01_02.png)
 
 
 
@@ -201,7 +201,7 @@ _ = az.plot_posterior(trace, var_names=['difference'],
 ```
 
 
-![png](img/AB_03.png)
+![png](../assets/posts/ab_test/AB01_03.png)
 
 
 결과, **A광고의 전환율이 B 광고의 전환율 보다 클 확율이 99.2%이다. 반대로 B 광고가 A광고보다 전환율이 높을 가능성은 고작 0.8%라고 할 수 있다.** 광고 A의 전환율이 높음을 알 수 있다.
