--- a/_posts/2020-05-28-AB_test.md
+++ b/_posts/2020-05-28-AB_test.md
@@ -4,7 +4,9 @@ title:  "bayesian A/B test"
 
 date: 2020-05-28 
 use_math: true
-categories: ['ab test'] 
+categories: ['ab_test'] 
+permalink: /categories/
+layout : category
 tags: ['bayesian', 'e-commerce', 'pymc3'] 
 
 ---
