--- a/_posts/2020-05-28-AB_test.md
+++ b/_posts/2020-05-28-AB_test.md
@@ -5,7 +5,7 @@ title:  "bayesian A/B test"
 date: 2020-05-28 
 use_math: true
 categories: ['ab_test'] 
-permalink: /categories/abtest01
+permalink: /categories/abtest01/
 layout : category
 tags: ['bayesian', 'e-commerce', 'pymc3'] 
 
