--- a/_posts/2020-05-28-AB_test.md
+++ b/_posts/2020-05-28-AB_test.md
@@ -1,14 +1,13 @@
 ---
 
 title:  "bayesian A/B test" 
+excerpt: "베이지안을 이용한 A/B 테스트"
 
-date: 2020-05-28 
-use_math: true
-categories: ['ab_test'] 
-permalink: /categories/abtest01/
 layout : category
+categories: ['data'] 
+permalink: /categories/bayesian/
 tags: ['bayesian', 'e-commerce', 'pymc3'] 
-
+taxonomy: bayesian
 ---
 <br><br>
 
