--- a/_posts/2020-05-28-AB_test.md
+++ b/_posts/2020-05-28-AB_test.md
@@ -4,10 +4,10 @@ title:  "bayesian A/B test"
 excerpt: "베이지안을 이용한 A/B 테스트"
 
 layout : category
-categories: ['data'] 
+categories: ['bayesian'] 
 permalink: /categories/bayesian/
 tags: ['bayesian', 'e-commerce', 'pymc3'] 
-taxonomy: bayesian
+# taxonomy: bayesian
 ---
 <br><br>
 
