--- a/_posts/2020-05-28-AB_test.md
+++ b/_posts/2020-05-28-AB_test.md
@@ -166,7 +166,7 @@ pm.model_to_graphviz(ad_model)
 
 
 
-![svg](../assets/posts/ab_test/AB01_01.svg)
+![svg](assets/posts/ab_test/AB01_01.svg)
 
 
 
@@ -190,7 +190,7 @@ _ = az.plot_trace(trace)
 ```
 
 
-![png](../assets/posts/ab_test/AB01_02.png)
+![png](assets/posts/ab_test/AB01_02.png)
 
 
 
@@ -200,7 +200,7 @@ _ = az.plot_posterior(trace, var_names=['difference'],
 ```
 
 
-![png](../assets/posts/ab_test/AB01_03.png)
+![png](assets/posts/ab_test/AB01_03.png)
 
 
 결과, **A광고의 전환율이 B 광고의 전환율 보다 클 확율이 99.2%이다. 반대로 B 광고가 A광고보다 전환율이 높을 가능성은 고작 0.8%라고 할 수 있다.** 광고 A의 전환율이 높음을 알 수 있다.
